# tmasque

./: .gitignore  LICENSE  README.md  pyproject.toml
tmasque/: Chromatogram.py  PeakQualityControl.py  QualityEncoder.py  TargetedMSQC.py  TargetedMSQualityEncoder.py  __init__.py  tmasque_runner.py
tmasque/encoder/: quality_encoder_type1.pickle  quality_encoder_type2.pickle  quality_encoder_type3.pickle
tmasque/example/: CPTC-EGFR-5_YSSD_2.tsv  PeakBoundaries.csv
